--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://rejulian:EC4Nf7hzo6wxjKIa@proyectocoder.fo07ay6.mongodb.net/ecommerce
+MONGO_URI=mongodb+srv://rejulian:EC4Nf7hzo6wxjKIa@proyectocoder.fo07ay6.mongodb.net/devrecursos
